web-hiring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 3
  labels:
    app: hiring-web
  name: hiring-web
  namespace: hiring
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hiring-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hiring-web
    spec:
      containers:
      - image: docker.io/docker/getting-started
        imagePullPolicy: Always
        name: hiring-web
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 10
  conditions:
  - lastTransitionTime: "2024-12-03T14:11:37Z"
    lastUpdateTime: "2024-12-03T14:11:44Z"
    message: ReplicaSet "synergychat-web-695b4987c4" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2024-12-04T00:43:13Z"
    lastUpdateTime: "2024-12-04T00:43:13Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 3
  readyReplicas: 10
  replicas: 10
  updatedReplicas: 10
