api-candidates-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-candidates-service
  namespace: candidates
spec:
  type: ClusterIP
  selector:
    app: candidates-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
