web-hiring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hiring-web-service
  namespace: hiring
spec:
  selector:
    app: hiring-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
