web-hiring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-hiring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hiring.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hiring-web-service
                port:
                  number: 80
    - host: candidateapi.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-candidates-service
                port:
                  number: 80
